@startuml
class PermissionsController {
    + PermissionsController(context:DBContext)
    + <<async>> All() : Task<ActionResult<string>>
    + <<async>> Create(template:Permissions) : Task<ActionResult<string>>
    + <<async>> Delete(id:string) : Task<ActionResult<string>>
    + <<async>> Delete(template:Permissions) : Task<ActionResult<string>>
    + Exists(id:string) : bool
    + <<async>> Get(id:string) : Task<ActionResult<string>>
    + <<async>> GetByRole(role:string) : Task<ActionResult<string>>
    + Settings() : string
    + <<async>> Update(id:string, template:Permissions) : Task<ActionResult<string>>
    + <<async>> UpdateAndFetchAll(id:string, template:Permissions) : Task<ActionResult<string>>
}
class "IUserInterfaceCRUD`1"<T> {
}
ControllerBase <|-- PermissionsController
"IUserInterfaceCRUD`1" "<Permissions>" <|-- PermissionsController
PermissionsController --> "permissionsControl" PermissionsControl
@enduml
